# tencent-scf-wasm-runtime

./: README.md
api/: Dockerfile  classify_yml.wasm  pre.sh  server.js
api/functions/image-classification-yml/: Cargo.toml
api/functions/image-classification-yml/src/: main.rs
api/functions/image-classification-yml/src/models/bird/: bird.yml
api/functions/image-classification-yml/src/models/food/: food.yml
api/functions/image-classification-yml/src/models/mobilenet_v2/: task.yml
pages/: index.js
