[package]
name = "classify_yml"
version = "0.1.0"
authors = ["csh"]
edition = "2018"

[[bin]]
name = "classify_yml"
path = "src/main.rs"

[dependencies]
wasmedge_tensorflow_interface = "^0.2.0"
argparse = "0.2.2"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"